--- a/first part_rest api/.env
+++ b/first part_rest api/.env
@@ -15,4 +15,8 @@ MAIL_PORT=465
 MAIL_SERVER=smtp.meta.ua
 
 REDIS_HOST=localhost
-REDIS=6379
+REDIS_PORT=6379
+
+cloudinary_name=test
+cloudinary_api_key=test
+cloudinary_api_secret=test
